2006-09-24  Stipe Tolj  <stolj at kannel.org>
  * test/test_http_server.c: fix compiler error for gcc 2.95.x due to a non
    first declaration of variables inside a if block.
    Thanks to Ben Suffolk <ben@vanilla.net> for reporting and patching.
    [Msg-Id: <9D37D8D9-ABA6-45B9-AB54-F687A46952BA@vanilla.net>]
    
2006-09-24  Stipe Tolj  <stolj at kannel.org>
  * gw/bb_store.c: fix the "never dump store" behaviour in store_dumper().
    The if condition garantees that we don't need to dump the store if nothing
    happened while we have been sleeping, but it arrises a problem when we are
    under constant high load: we would never dump the store. In case the
    difference between now and last dict operation is constantly lower then
    the dump frequency, then we never enter the if conditioned block and hence
    never dump, resulting in the effect that we never remove "old" messages
    from the store that have been ACKed and are removed while the new dump
    is generated. Now we introduce a busy flag that garantees that we do
    dump in case we're under constant load, but not if we really haven't
    done anything.
    
2006-09-19  Stipe Tolj  <stolj at kannel.org>
  * gw/smsbox.c: make sure we duplicate the smsc-id value for any reply msg
    struct passing back to bearerbox for MT transport. This would otherwise
    break certain routing setups where smsc-ids are needed.

2006-09-14  Stipe Tolj  <stolj at kannel.org>
  * test/test_store_dump.c: adding a simple test tool to msg_dump() the
    contents of a store-file.
  * test/test_list.c: adding a simple List object tester.
  * test/test_http_server.c: add a URI /mmsc to act as a MM1 interface HTTP
    server and reply with a M-Send.conf PDU when MMS client is sending a 
    HTTP POST with the M-Send.req PDU. Only for testing and capturing purposes.
  * test/test_conn.c: add generic connection type tester.
    
2006-09-09  Stipe Tolj  <stolj at kannel.org>